ammo reload and game over
Added ability to reload the weapon over time. Ammo is recharged about every second. Need to figure out how health will work and how it will be given back. This will likely cause issues with everything. Might have to do a simple reload button and leave the charging over time for the health. I am also considering adding a gun class so I can have multiple settings for guns. I also need to rework the general structure of the code. As it stands right now it feels like there isn't much structure being followed. I would like to keep the loop() function as clean as possible. The checkHit() function needs to mirror the checkAmmo

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,4 @@ LaserTagVisualStudio.vcxproj
 LaserTagVisualStudio.vcxproj.filters
 LaserTagVisualStudio.vcxproj.user
 src/arduino folders read me.txt
+.vs/LaserTagVisualStudio/v16/.suo
